			TinyMUSH 3.1 Changes
=============================================================================

TinyMUSH 3.1 beta 1 was released on May 8th, 2002.
The "full", gamma release of TinyMUSH 3.1 is dated June 21st, 2004.

-----------------------------------------------------------------------------

BUGFIX PATCHES SINCE THE 3.1 RELEASE

3.1 Patchlevel 2

  - The engine is now able to find the data directory and names of 
    the db/crash files from the environment. The configuration
    parameters 'database_home',  'crash_database' and 'gdbm_database'
    are still avalable for backward compatibility.

  - Startmush now terminate correctly on most platform. awk now kill
    the tail process instead of just closing the pipe (on some
    platform, tail doesn't exit when the pipe is close, leaving a
    zombie tail process running)

  - Added EXIT, ROOMS and VEHICLE topics in qhelp.txt. 

  - Fixed a memory leak in sql_query function where result was stored but
    never freed so whenever a query returns an empty result it leaks a 
    mysql result structure. [3.0; Dan Ryan]

  - Added /spoof switch for @fsay/@fpose/@femit.

  - Modified the documentation to properly reference @speechformat 
    instead of @speechmod [3.1b7; Jared Robertson]

  - Changed the wizhelp topic text of LOGGING and INHERITANCE to
    "This topic hasn't been written yet." [MUX; Jared Robertson]

  - Added a REGISTRATION wizhelp topic (was referenced by @PCREATE and
    REGISTER_SITE) [MUX; Jared Robertson]

3.1 Patchlevel 1					August 11th, 2004

  - Fixed a bug in dbconvert where the cache wasn't flushed before
    closing the database, creating an incomplete database. [3.1p0]

-----------------------------------------------------------------------------

CHANGES TO THE BASE SERVER

- The licensing scheme has been changed to the Artistic License.

- A new script, Update, automatically downloads and applies official patches
  to TinyMUSH 3.
