@@ -2,19 +2,19 @@
 #
 #	Change these variables as appropriate
 #
-export GAMENAME=netmush
-export OWNER=mush_admin@your_site.your_domain
+GAMENAME=netmush
+OWNER=mush_admin@your_site.your_domain
 #
-export BIN=./bin
-export TEXT=./text
-export DATA=./data
-export BACKUP_DIR=./backups
-export ZIP=gzip
+BIN=./bin
+TEXT=./text
+DATA=./data
+BACKUP_DIR=./backups
+ZIP=gzip
 #
 #	You should never need to change these.
 #
-export GDBM_DB=$GAMENAME.gdbm
-export CRASH_DB=$GAMENAME.db.CRASH
-export BACKUP_DB=$GAMENAME.db.bk
-export LOGNAME=$GAMENAME.log
-export PIDFILE=$GAMENAME.pid
+GDBM_DB=$GAMENAME.gdbm
+CRASH_DB=$GAMENAME.db.CRASH
+BACKUP_DB=$GAMENAME.db.bk
+LOGNAME=$GAMENAME.log
+PIDFILE=$GAMENAME.pid
