@@ -149,12 +149,14 @@ struct confdata {
 	int	fwdlist_lim;	/* Max objects in @forwardlist */
 	int	dbopt_interval; /* Optimize db every N dumps */
 	char	*dbhome;	/* Database home directory */
+	char	*txthome;	/* Text files home directory */
+	char	*binhome;	/* Binary home */
 	char	*config_file;	/* name of config file, used by @restart */
-	char	*crashdb;		/* write database here on crash */
-	char	*gdbm;			/* use this gdbm file if we need one */
-	char	*status_file;		/* Where to write arg to @shutdown */
-	char	*mudlogname;		/* Name of the game log file */
-	char	*pid_file;		/* Name of the game pid file */
+	char	*crashdb;	/* write database here on crash */
+	char	*gdbm;		/* use this gdbm file if we need one */
+	char	*status_file;	/* Where to write arg to @shutdown */
+	char	*mudlogname;	/* Name of the game log file */
+	char	*pid_file;	/* Name of the game pid file */
 	int	have_pueblo;	/* Is Pueblo support compiled in? */
 	int	have_zones;	/* Should zones be active? */
 	int	port;		/* user port */
